
2010-11-12  Cedric BAIL

	* Don't try to read broken file when open in READ_WRITE mode.

2010-11-14  Cedric BAIL

	* Fix bug with cypher and compression used together.

2010-11-21  Carsten Haitzler (The Rasterman)

	* Fix another bug related to cipher and compression (leak and
        bad free)

2010-11-25  Cedric BAIL

	* Add EET_DATA_DESCRIPTOR_ADD_VAR_ARRAY_STRING.

2010-11-26  Cedric BAIL

	* Reduce memory used by Eet dictionary.

2010-11-29  Cedric BAIL

	* Improve speed of Eet_String users. It does impact all string
	encoding/decoding, but even faster for stringshare encoding.

	* Improve speed when decoding mostly array with eet_data_read.

2010-12-03  Cedric BAIL

	* Improve portability.

2010-12-07  Carsten Haitzler (The Rasterman)

	* Move raw function pointer defs to typedefs in public API for
        readability improvements.

2011-01-29  Carsten Haitzler (The Rasterman)

	 * 1.4.0 release

2011-01-29  Vincent Torri

	* Use eina_stringshare_add() instead of strdup() on mmaped file names
	on Windows. This fix eet shut down on Windows.

2011-02-14  Cedric BAIL

	* Improve Eet_Data to make decoding of EET_G_UNION and EET_G_*ARRAY
	faster and less memory heavy.

2011-05-14  Cedric BAIL

	* Use Eina_Lock.
	* Sync GNUTLS initialisation with Eina.

2011-05-17  Cedric BAIL

	* Use Eina_File.
	* Fix test forgetting to initialize eet.

2011-05-23  Vincent Torri

	* Fix compilation with libjpeg 8 on Windows.

2011-06-10  Cedric BAIL

	* Add EET_DATA_DESCRIPTOR_ADD_LIST_STRING helper to define List of char *.

2011-07-04  Mike Blumenkrantz

        * Add functions to manipulate nodes:
            eet_node_children_get, eet_node_next_get, eet_node_parent_get,
            eet_node_type_get, eet_node_value_get, eet_node_name_get
        * Fix segmentation faults in several eet_node functions

2011-07-16  Vincent Torri

	* On Windows, open() in text mode followed by fdopen() in
	binary mode does not create a stream in binary mode.
	So add O_BINARY to open().